--- a/src/main/resources/templates/loginPage.html
+++ b/src/main/resources/templates/loginPage.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-  <link th:href="@{/css/Bootstrap.min.css}"
-        href="/css/Bootstrap.min.css" rel="stylesheet">
+  <link th:href="@{/css/Bootstrap.min.css}" rel="stylesheet">
   <title>withUs</title>
 </head>
 <body>
 <div style="text-align: center">
+
   <h1 style="font-size: 60px; padding-top: 40px">withUs</h1>
   <form id="loginForm" action ="/api/member/login" method="post">
     <div style="padding: 50px 35% 0px 35%; ">
@@ -42,6 +42,9 @@
 
 </div>
 <script th:inline="javascript">
+  const host = 'http://' + window.location.host;
+
+
   function onLogin(){
     let loginname = $('#loginname').val();
     let password = $('#password').val();
@@ -55,7 +58,34 @@
     .done(function (res, textStatus, xhr) {
       let accessToken = xhr.getResponseHeader('Authorization');
       localStorage.setItem("accessToken", accessToken);
-      window.location.href = 'profilePage';
+      // window.location.href = '/templates/profile'
+      window.location.href = host + '/api/member/profilePage/' + memberId;
+    //
+    //   // test용 코드 추후에 메인페이지 이동 ajax로 변경
+    //   $.ajax({
+    //     type: 'GET',
+    //     url: host + '/api/member/profilePage/1',
+    //     headers: {
+    //       'Authorization': accessToken
+    //     },
+    //   })
+    //   .done(function(response) {
+    //     window.location.href = host + '/api/member/profilePage/1';
+    //   })
+    //   .fail(function(error) {
+    //     // 실패한 경우의 동작
+    //     console.error('프로필 페이지 로딩 에러', error);
+    //
+    //   });
+    //
+    // })
+    // .fail(function (res) {
+    //   alert("Login Fail" + res.getWriter());
+    //   window.location.href = '/api/member/loginPage'
+    //
+      // window.location.href = host + '/api/member/profilePage/1';
+
+      // 추후에 메인페이지로 이동으로 변경
     })
     .fail(function (res) {
       alert("Login Fail" + res.getWriter());
