--- a/src/main/resources/templates/updateProfile.html
+++ b/src/main/resources/templates/updateProfile.html
@@ -11,7 +11,7 @@
 <form action="/api/member/updateMember" method="post">
   <div style="margin: 40px 35% 0 35%">
     <div>
-      <img src="../static/images/default.png"
+      <img src="../static/img/default.png"
            style="border-radius: 100%; height: 200px; width: 200px; float:left">
     </div>
     <div class="mb-3">
