--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -25,6 +25,7 @@
 
       if (isSameMember) {
         $('#chatting').hide();
+        $('#inviting').hide();
       }
 
       $.ajax({
@@ -107,7 +108,7 @@
            style="border-radius: 100%; height: 85px; width: 85px; float:left"
            class="col-auto">
     </div>
-    <div style="margin-top:50px; margin-left: 60%">
+    <div style="margin-top:50px; margin-left: 60% " id="inviting">
       <img src="/img/invite.png"
            style="border-radius: 100%; height: 100px; width: 100px; float:left"
            class="col-auto">
