--- a/src/main/resources/templates/notice/noticeDetail.html
+++ b/src/main/resources/templates/notice/noticeDetail.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
+
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-  <script src="https://kit.fontawesome.com/d1fc3aeceb.js" crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-  <title>게시판 디테일스</title>
+  <link th:href="@{/css/Bootstrap.min.css}" href="/css/Bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <title>게시글 상세 페이지</title>
   <style>
     header {
       display: flex;
@@ -16,9 +17,10 @@
       background-color: rgba(255, 255, 255, 0.8);
       box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
       position: fixed;
-      width: 80%; /* 전체 너비로 조절 */
+      width: 100%;
+      /* 전체 너비로 조절 */
       top: 0;
-      margin-left: 10%;
+      margin-left: 0%;
     }
 
     .title {
@@ -33,17 +35,54 @@
 
     .withUs {
       margin-top: 5px;
-      margin-bottom: 5px; /* 아래쪽 여백 5px 추가 */
+      margin-bottom: 5px;
+      /* 아래쪽 여백 5px 추가 */
     }
 
-    .icon, .arrow-icon {
+    .icon,
+    .arrow-icon {
       cursor: pointer;
       font-size: 20px;
-      margin-left: 50%; /* 좌측 여백 15% 추가 */
-      margin-right: 40px; /* 우측 여백 15px 추가 */
+      margin-left: 50%;
+      /* 좌측 여백 15% 추가 */
+      margin-right: 40px;
+      /* 우측 여백 15px 추가 */
     }
+
+    section {
+      margin-top: 50px;
+      margin: 100px 100px;
+    }
+
+    body {
+      padding-top: 75px;
+    }
+
+    .noticename {
+      width: 1000px;
+      margin: 100px auto;
+    }
+
+    textarea {
+      resize: none;
+    }
+
+    .on {
+      margin-top: -20px;
+      margin-bottom: 30px;
+      text-align: right;
+    }
+
+    .pagination {
+      margin-top: 10px;
+      justify-content: center;
+    }
+
+
+
   </style>
 </head>
+
 <body>
 <div>
   <header>
@@ -51,10 +90,54 @@
       <h2 class="withUs">withUs</h2>
     </div>
     <div class="title2">
-      <i class="icon fa-solid fa-user" onclick="location.href=host + '/api/member/profilePage/' + memberId"></i>
+      <i class="icon fa-solid fa-user"
+         onclick="location.href=host + '/api/member/profilePage/' + memberId"></i>
       <i class="arrow-icon fa-solid fa-arrow-rotate-left" onclick="history.back()"></i>
     </div>
   </header>
+</div>
+<script src="https://kit.fontawesome.com/d1fc3aeceb.js" crossorigin="anonymous"></script>
+<div class="noticename">
+  <p style="font-size: 150%;" ><textarea id="noticeTitle" disabled></textarea></p>
+  <p><textarea style="width: 1000px;height:300px;font-size:20px;" disabled id="noticeContent"></textarea></p>
+  <p style="font-size: 300%;">Comment</p>
+  <p><textarea id="commentContent" placeholder="내용 입력" style="width: 1000px;height:100px;font-size:20px;"></textarea></p>
+  <div class="on">
+    <button type="button" class="btn btn-dark" onclick="sendNoticeRequest()">등록</button>
+  </div>
+
+  <div class="card" id="comment">
+    <div>
+      <div class="card-header">
+        <p id="username">작성자</p>
+      </div>
+      <div class="card-body">
+        <blockquote class="blockquote mb-0">
+          <p>댓글 내용</p>
+        </blockquote>
+      </div>
+    </div>
+  </div>
+
+  <nav aria-label="Page navigation example">
+    <ul class="pagination">
+      <li class="page-item">
+        <a class="page-link" href="#" aria-label="Previous">
+          <span aria-hidden="true">&laquo;</span>
+        </a>
+      </li>
+      <li class="page-item"><a class="page-link" href="#">1</a></li>
+      <li class="page-item"><a class="page-link" href="#">2</a></li>
+      <li class="page-item"><a class="page-link" href="#">3</a></li>
+      <li class="page-item"><a class="page-link" href="#">4</a></li>
+      <li class="page-item"><a class="page-link" href="#">5</a></li>
+      <li class="page-item">
+        <a class="page-link" href="#" aria-label="Next">
+          <span aria-hidden="true">&raquo;</span>
+        </a>
+      </li>
+    </ul>
+  </nav>
 </div>
 
 <script th:inline="javascript">
@@ -71,17 +154,83 @@
         let dto=  result.data;
         let title = dto.title;
         let content = dto.content;
-        $("#title").val(title);
-        $("#content").val(content);
+        $("#noticeTitle").val(title);
+        $("#noticeContent").val(content);
+
+
+        $.ajax({
+          type:'GET',
+          url:'/api/notice/'+noticeId+'/comment',
+          contentType: 'application/json',
+          success:function (result){
+            let list =result.data
+            $(list).each(function (index,res){
+              console.log(index+" : "+res.username);
+              let name = res.username;
+              let comment = res.content;
+              let id = res.id;
+              const a = '<div id="' + id + '">\n'
+                  + '      <div class="card-header">\n'
+                  + '        <p ></p>\n'
+                  + '      </div>\n'
+                  + '      <div class="card-body">\n'
+                  + '        <blockquote class="blockquote mb-0">\n'
+                  + '          <p>댓글 내용</p>\n'
+                  + '        </blockquote>\n'
+                  + '      </div>\n'
+                  + '    </div>';
+              $('#comment').append(a);
+              // $("#username").text(name)
+
+
+
+            });
+          },
+          error:function (){
+            alert("Error");
+          }
+        })
+
+
       }
     })
+
+
+
+
   })
+
+  function sendNoticeRequest(){
+    const noticeId = [[${noticeId}]];
+    let content = $('#commentContent').val();
+
+    $.ajax({
+      type:"POST",
+      url:'/api/notice/'+noticeId+'/comment',
+      contentType:"application/json",
+      dataType:"json",
+      data : JSON.stringify({
+        "content" : content
+      }),
+      success : function (response){
+        if(response.msg === 'Comment 생성 성공'){
+          console.log('Comment 생성 성공',response)
+        }
+        else {
+          console.error('Comment 생성 실패 :',response)
+        }
+      },
+      error: function (error){
+        console.error('에러 :',error)
+      }
+    })
+
+  }
 
 
   /*]]>*/
 </script>
 
-
-
 </body>
+
 </html>
