--- a/src/main/resources/templates/loginPage.html
+++ b/src/main/resources/templates/loginPage.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-  <link th:href="@{/css/Bootstrap.min.css}"
-        href="/css/Bootstrap.min.css" rel="stylesheet">
+  <link th:href="@{bootstrap.min.css}"
+        href="/css/bootstrap.min.css" rel="stylesheet">
   <title>withUs</title>
 </head>
 <body>
