--- a/src/main/resources/templates/noticedetail.html
+++ b/src/main/resources/templates/noticedetail.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-  <link th:href="@{/css/Bootstrap.min.css}" href="/css/Bootstrap.min.css" rel="stylesheet">
+  <link th:href="@{bootstrap.min.css}" href="/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <title>게시글 상세 페이지</title>
