--- a/src/main/resources/templates/updateProfile.html
+++ b/src/main/resources/templates/updateProfile.html
@@ -2,8 +2,8 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
-  <link th:href="@{/css/Bootstrap.min.css}"
-        href="../../resources/static/css/Bootstrap.min.css" rel="stylesheet">
+  <link th:href="@{bootstrap.min.css}"
+        href="../static/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
   <title>withUs</title>
 </head>
