--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/html">
+<html xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
 <head>
   <meta charset="UTF-8">
   <title>withUs</title>
   <script src="https://code.jquery.com/jquery-3.7.0.min.js"
           integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
-  <link href="static/css/bootstrap.min.css" rel="stylesheet">
+  <link href="/css/Bootstrap.min.css" rel="stylesheet">
   <style>
     .main{
       padding-right: 20%;
@@ -35,9 +35,6 @@
       justify-content: center;
       width: 100%;
     }
-
-
-
 
     .search {
       position: relative;
@@ -95,18 +92,15 @@
       padding: 0.5em 1.7em 0.6em 1.7em;
     }
     .cardGroup{
-
+      text-align: center;
     }
 
     .cardParent{
-      height: 70px;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      padding-top: 80px;
-      padding-bottom: 20px;
-
+      padding-top: 40px;
     }
 
     .card{
@@ -115,25 +109,28 @@
       font-weight: bold;
       border-radius: 20px;
     }
+
     .image{
-      width: 100%;
+      width: 150px;
+      height: 150px;
+      border-radius: 50%;
+      float: left;
     }
 
 
-    .img-fluid {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      width: 170px;
-      height: 160px;
-      border-radius: 20px;
-    }
+    /*.img-fluid {*/
+    /*  display: flex;*/
+    /*  flex-direction: column;*/
+    /*  align-items: center;*/
+    /*  justify-content: center;*/
+    /*  border-radius: 20px;*/
+    /*}*/
 
     .cardText{
       padding-top: 15px;
       padding-bottom: 10px;
       text-align: center;
+      margin-right: 50px;
     }
 
 
@@ -164,44 +161,145 @@
 
 
   </style>
-  <script>
+  <script th:inline="javascript">
+    let clubId = /*[[${clubId}]]*/ '';
+    let category = 'ALL';
+    let clubImage;
+    let clubName;
+    let clubContent;
+    let numberOfPeople;
+
     $(document).ready(function (){
 
-
-
-
-
-
-
-      var category = /*[[${category}]]*/'';
       console.log("카테고리 : "+category)
-
-
 
       $.ajax({
         type: 'GET',
-        url: '/api/club/'+category,
-      })
+        url: '/api/club/'+category+'/club',
+        contentType: 'application/json',
+        success: function (response){
+          for(var i=0; i<response.data.length; i++){
+            var currentItem = response.data[i];
+            if(currentItem.imageURL !== null){
+              clubImage = currentItem.imageURL;
+            } else{
+              clubImage = '/img/default.png';
+            }
+            clubId = currentItem.clubId;
+            clubName = currentItem.clubTitle;
+            clubContent = currentItem.content;
+            numberOfPeople = currentItem.maxMember;
+            console.log("생성완료");
+            $('#cardGroup').append($('<div class="cardGroup" >\n'
+                + '    <tr>\n'
+                + '      <div class="cardParent">\n'
+                + '        <div id="'+clubId+'" class="card mb-3" onclick="getClub()">\n'
+                + '          <div>\n'
+                + '            <div>\n'
+                + '              <div class="image">\n'
+                + '                <img src="'+clubImage+'" class="img-fluid rounded-start" alt="...">\n'
+                + '              </div>\n'
+                + '            </div>\n'
+                + '            <div class="cardText">\n'
+                + '              <div>\n'
+                + '                <div class="card-body">\n'
+                + '                  <p class="card-title">'+clubName+'</p>\n'
+                + '                  <p class="card-text">'+clubContent+'</p>\n'
+                + '                  <p class="card-text">'+numberOfPeople+'</p>\n'
+                + '                </div>\n'
+                + '              </div>\n'
+                + '            </div>\n'
+                + '          </div>\n'
+                + '        </div>\n'
+                + '      </div>\n'
+                + '    </tr>\n'
+                + '  </div>'
 
+                )
+            );
+          }
+        }
+      });
+    });
 
+    function getClub(){
+      var clubId = this.clubId;
+      let url = '/api/club/clubPage/' + clubId;
+      location.href = url;
+    }
 
+    function changeCategory(button){
+      category = button.getAttribute('name');
+      console.log(category);
 
+      $.ajax({
+        type: 'GET',
+        url: '/api/club/'+category+'/club',
+        contentType: 'application/json',
+        success: function (response){
+          if(response.data === null) {
+            $('#cardGroup').empty();
+            $('#cardGroup').append($('<p>검색된 클럽이 없습니다.</p>'))
+          }else {
+            $('#cardGroup').empty();
+            for (var i = 0; i < response.data.length; i++) {
+              var currentItem = response.data[i];
+              if (currentItem.imageURL !== null) {
+                clubImage = currentItem.imageURL;
+              } else {
+                clubImage = '/img/default.png';
+              }
+              clubId = currentItem.clubId;
+              clubName = currentItem.clubTitle;
+              clubContent = currentItem.content;
+              numberOfPeople = currentItem.maxMember;
+              console.log("생성완료");
+              $('#cardGroup').append($('<div class="cardGroup" >\n'
+                      + '    <tr>\n'
+                      + '      <div class="cardParent">\n'
+                      + '        <div id="' + clubId + '" class="card mb-3" onclick="getClub()">\n'
+                      + '          <div>\n'
+                      + '            <div>\n'
+                      + '              <div class="image">\n'
+                      + '                <img src="' + clubImage
+                      + '" class="img-fluid rounded-start" alt="...">\n'
+                      + '              </div>\n'
+                      + '            </div>\n'
+                      + '            <div class="cardText">\n'
+                      + '              <div>\n'
+                      + '                <div class="card-body">\n'
+                      + '                  <p class="card-title">' + clubName + '</p>\n'
+                      + '                  <p class="card-text">' + clubContent + '</p>\n'
+                      + '                  <p class="card-text">' + numberOfPeople + '</p>\n'
+                      + '                </div>\n'
+                      + '              </div>\n'
+                      + '            </div>\n'
+                      + '          </div>\n'
+                      + '        </div>\n'
+                      + '      </div>\n'
+                      + '    </tr>\n'
+                      + '  </div>'
+                  )
+              );
+            }
+          }
+        }
+      });
+    }
 
+    function searchKeyword(){
 
-    })
-
+    }
   </script>
-
 </head>
 <body>
-
 <div class="main ">
 
   <div class="title">
     <header>
       <div class="title-group" role="group">
         <div class="title">
-          <h2 class="withUs" style="float: left">withUs</h2>
+          <h2 class="withUs" th:onclick="|location.href='@{/}'|" style="float: left">withUs</h2>
         </div>
         <div class="title2" style="float: right">
           <h2 class="login" style="float: left" >login</h2>
@@ -223,8 +321,8 @@
           <option value="Study">스터디</option>
           <option value="Etc">기타</option>
         </select>
-        <input type="text" placeholder="검색어 입력">
-        <img src="/images/icon-search.png" >
+        <input type="text" id="searchText" placeholder="검색어 입력" onsubmit="searchKeyword()">
+        <img src="/img/icon-search.png" >
       </div>
     </div>
   </div>
@@ -233,39 +331,39 @@
   </div>
   <div class="category" >
     <div class="btn-group" role="group" aria-label="Basic outlined example">
-      <button type="button" class="btn btn-outline-primary">운동</button>
-      <button type="button" class="btn btn-outline-primary">일상</button>
-      <button type="button" class="btn btn-outline-primary">게임</button>
-      <button type="button" class="btn btn-outline-primary">음식</button>
-      <button type="button" class="btn btn-outline-primary">스터디</button>
-      <button type="button" class="btn btn-outline-primary">기타</button>
+      <button type="button" class="btn btn-outline-primary" name="SPORTS" onclick="changeCategory(this)">운동</button>
+      <button type="button" class="btn btn-outline-primary" name="TODAY" onclick="changeCategory(this)">일상</button>
+      <button type="button" class="btn btn-outline-primary" name="GAME" onclick="changeCategory(this)">게임</button>
+      <button type="button" class="btn btn-outline-primary" name="FOOD" onclick="changeCategory(this)">음식</button>
+      <button type="button" class="btn btn-outline-primary" name="STUDY" onclick="changeCategory(this)">스터디</button>
+      <button type="button" class="btn btn-outline-primary" name="ETC" onclick="changeCategory(this)">기타</button>
     </div>
   </div>
 
 
-  <div id="cardGroup" >
-    <tr th:if="${!list.isEmpty()}" th:each="club : ${list}">
-      <div class="cardParent">
-        <div class="card mb-3" >
-          <div class="row g-0">
-            <div class="col-md-4">
-              <div class="image">
-                <img th:src="${club.imageURL()}" class="img-fluid rounded-start" alt="..." style="float: left" >
-              </div>
-            </div>
-            <div class="cardText">
-              <div class="col-md-8">
-                <div class="card-body">
-                  <p class="card-title" ><span th:text="'클럽명 : '+${club.clubTitle()}">message</span></p>
-                  <p class="card-text" th:text="'내용 : '+${club.content()}"></p>
-                  <p class="card-text" th:text="'모집인원 : '+${club.maxMember()}"></p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </tr>
+  <div id="cardGroup">
+<!--    <tr>-->
+<!--      <div class="cardParent">-->
+<!--        <div class="card mb-3" >-->
+<!--          <div class="row g-0">-->
+<!--            <div class="col-md-4">-->
+<!--              <div class="image">-->
+<!--                <img id="clubImage" class="img-fluid rounded-start" alt="..." style="float: left" >-->
+<!--              </div>-->
+<!--            </div>-->
+<!--            <div class="cardText">-->
+<!--              <div class="col-md-8">-->
+<!--                <div class="card-body">-->
+<!--                  <p class="card-title" id="clubName"></p>-->
+<!--                  <p class="card-text" id="clubContent"></p>-->
+<!--                  <p class="card-text" id="numberOfPeople"></p>-->
+<!--                </div>-->
+<!--              </div>-->
+<!--            </div>-->
+<!--          </div>-->
+<!--        </div>-->
+<!--      </div>-->
+<!--    </tr>-->
   </div>
 
   <footer>
@@ -277,15 +375,6 @@
       </div>
     </div>
   </footer>
-
-
 </div>
-
-
-
-
-
-
-
 </body>
 </html>
