--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -13,7 +13,8 @@
     $(document).ready(function(){
 
       const isSameMember = /*[[${isSameMember}]]*/ '';
-      const membmerId = /*[[${memberId}]]*/ '';
+      const memberId = /*[[${memberId}]]*/ '';
+      console.log(memberId);
 
       if (isSameMember) {
         $('#chatting').hide();
@@ -22,15 +23,29 @@
 
       $.ajax({
         type:'GET',
-        url:`/api/member/getMember/` + membmerId,
+        url:`/api/member/`+ memberId,
         contentType: 'application/json',
-      })
-      .done(function (res){
-        const username = res.username;
-        const email = res.email;
+        success: function(response){
+          if(response.data.imageURL !== null){
+            $('#profileImage').attr('src', response.data.imageURL);
+          } else{
+            $('#profileImage').attr('src', '/img/default.png');
+          }
 
-      })
-    })
+          $('#username').text(response.data.username);
+          $('#email').text(response.data.email);
+          $('#introduction').text(response.data.introduction);
+
+          let tagArray = JSON.parse(response.data.tag);
+          tagArray.forEach(function(tag) {
+            $('#tag').append('#' + tag.trim()+'  ');
+          });
+        },
+        error: function(error){
+          console.error("에러 :", error)
+        }
+      });
+    });
 
     function chattingClicked() {
       // 클릭되었을 때 실행할 동작을 정의
@@ -65,40 +80,47 @@
       });
     }
 
-
+    function updateProfile(){
+      var memberId = /*[[${memberId}]]*/ '';
+      let url = '/api/member/updateProfilePage/' + memberId;
+      location.href = url;
+    }
   </script>
 </head>
 <body style="background-image: url('/img/background.jpg'); background-size: cover; background-position: center;">
 <div style="margin: 40px 35% 200px 35%">
   <div>
-    <img src="/img/default.png"
-         style="border-radius: 100%; height: 200px; width: 200px; float:left"
+    <img id="profileImage"
+         style="border-radius: 100%; height: 170px; width: 170px; float:left"
          class="col-auto">
   </div>
-  <div style="padding-top: 40px">
-    <h2 th:value="username"></h2>
-    <h2 style="margin-top: 30px" th:value="email"></h2>
+  <div style="padding-top: 30px">
+    <h5 id="username"></h5>
+    <h5 style="margin-top: 50px" id="email"></h5>
   </div>
-  <div style="margin-top:100px; background-color: beige">
-    <h2>태그 목록</h2>
+  <div style="margin-top:150px; background-color: beige">
+    <h5 id="tag"></h5>
   </div>
   <div style="margin-top:100px; background-color: beige; height: 200px">
-    <h2 th:value="introduction"></h2>
+    <h5 id="introduction"></h5>
   </div>
   <div>
-    <div style="margin-top:50px; margin-left: 15%" id="chatting" onclick="chattingClicked()">
-      <img src="/img/message.png"
-           style="border-radius: 100%; height: 85px; width: 85px; float:left"
-           class="col-auto">
-    </div>
-    <div style="margin-top:50px; margin-left: 60% " id="inviting">
-      <img src="/img/invite.png"
-           style="border-radius: 100%; height: 100px; width: 100px; float:left"
-           class="col-auto">
+    <div class="d-grid col-3 mx-auto" style="padding: 15px 0 5px 0 ">
+      <button type="button"
+              class="btn btn-primary" onclick="updateProfile()">수정하기
+      </button>
+      <div style="margin-top:50px; margin-left: 15%" id="chatting" onclick="chattingClicked()">
+        <img src="/img/message.png"
+             style="border-radius: 100%; height: 85px; width: 85px; float:left"
+             class="col-auto">
+      </div>
+      <div style="margin-top:50px; margin-left: 60% " id="inviting">
+        <img src="/img/invite.png"
+             style="border-radius: 100%; height: 100px; width: 100px; float:left"
+             class="col-auto">
+      </div>
     </div>
   </div>
 </div>
-
-
 </body>
 </html>
